--- a/java1-2/index_while.html
+++ b/java1-2/index_while.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <!-- scriptタグ内のsrc="app.js"で、外部のJavaScriptファイルを読み込み -->
-    <script src="app_while.js"></script>
+    <script src="app_while2.js"></script>
   </body>
 </html>
